# front-end

./: .editorconfig  .env  README.md  package.json
scripts/: generate.mjs
src/: App.tsx  command.ts  importMonaco.ts  index.tsx  routes.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: command.rs  main.rs  sys.rs
src-tauri/src/sys/: common.rs  macos.rs  win.rs
src/components/: Header.tsx  Sidebar.tsx  YamlEditor.tsx
src/hooks/: useTimeAgo.ts
src/monaco/: importMonaco.ts  index.ts
src/pages/index/: Index.tsx
src/pages/net/: Net.tsx
src/pages/profile/: Profile.tsx  useProfile.ts
src/pages/select/: Select.tsx
src/pages/settings/: Settings.tsx
src/rdp/: generated.ts  hooks.ts  hooks.tsx  index.ts  jsonSchema.json  provider.ts  types.ts
